--- a/nguyenxuanloc_2011064700/Content/Site.css
+++ b/nguyenxuanloc_2011064700/Content/Site.css
@@ -8,6 +8,10 @@
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
+.navbar-inverse{
+    background-color:aqua;
+}
+
 .dl-horizontal dt {
     white-space: normal;
 }
@@ -17,4 +21,29 @@ input,
 select,
 textarea {
     max-width: 280px;
+    /*Course layout*/
 }
+
+
+{
+    list-style: none;
+}
+
+.course > li {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+    .course > li .date {
+        text-align: center;
+        background-color: aqua;
+        color: white;
+        width: 60px;
+        border-radius: 8px;
+    }
+
+    .course > li .details {
+        position: absolute;
+        top: 0;
+        left: 70px;
+    }
