--- a/nguyenxuanloc_2011064700/Views/Courses/Create.cshtml
+++ b/nguyenxuanloc_2011064700/Views/Courses/Create.cshtml
@@ -1,24 +1,31 @@
-﻿@model nguyenxuanloc_2011064700.ViewModels.CourseViewModel
+﻿
+@model nguyenxuanloc_2011064700.ViewModels.CourseViewModel
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Create</h2>
-<form>
+
+    @using (Html.BeginForm("Create", "Courses"))
+    {
+        @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Place)
         @Html.TextBoxFor(m => m.Place, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Place)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Date)
         @Html.TextBoxFor(m => m.Date, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Date)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Time)
         @Html.TextBoxFor(m => m.Time, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Time)
 
 
     </div>
@@ -26,11 +33,17 @@
         @Html.LabelFor(m => m.CateGory)
 
         @Html.DropDownListFor(m => m.CateGory,
-       new SelectList(Model.Categories, "Id", "Name"), "", new { @class = "form-control" })
+            new SelectList(Model.Categories, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.CateGory)
+
+
     </div>
-    <div class=" form -group"></div>
-    <div class=" form -group"></div>
-    <div class=" form -group"></div>
-    <div class=" form -group"></div>
-</form>
+    <button type="submit" value="Save" class="btn btn-primary">Save</button>
+    }
+    @section scripts
+    {
+        @Scripts.Render("~/bundles/jqueryval");
+    }
+   
+
 
